[package]
name = "haunted"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "msgpack"] }
phantom-zone-evaluator = { git = "https://github.com/gausslabs/phantom-zone", rev = "34d4af46697717cd7039de1c91892916af5e9e21", features = [
    "serde",
    "dev",
] }
anyhow = { version = "1.0.86" }
thiserror = { version = "1.0.63" }
serde = { version = "1.0.209" }
serde_json = { version = "1.0.127" }
reqwest = { version = "0.12.5", features = ["json", "stream"] }
tokio = { version = "1.39.3", features = ["full"] }
rand = { version = "0.8.5" }
itertools = { version = "0.13.0" }
rayon = { version = "1.10.0" }
tokio-util = { version = "0.7.11" }
indicatif = { version = "0.17.8" }
num-traits = { version = "0.2.19" }
bincode = { version = "1.3.3" }
