[package]
edition = "2021"
name = "haunted"
version = "0.1.0"

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.7", features = ["ws"] }
bincode = "1.3.3"
futures-util = "0.3.31"
headers = "0.4.0"
http-body-util = "0.1.2"
hyper = "1.4.1"
hyper-util = { version = "0.1.9", features = ["client-legacy"] }
itertools = { version = "0.13.0" }
# phantom-zone-evaluator = { git = "https://github.com/han0110/phantom-zone", branch = "rewrite/ring-packing", features = ["serde"] }
phantom-zone-evaluator = { path = "../phantom-zone/evaluator", features = ["serde"] }
rand = { version = "0.8.5" }
serde = { version = "1.0" }
tokio = { version = "1.0", features = ["rt-multi-thread", "signal"] }
tokio-tungstenite = "0.24.0"
tower = "0.5.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[dev-dependencies]
# phantom-zone-evaluator = { git = "https://github.com/han0110/phantom-zone", branch = "rewrite/ring-packing", features = ["dev"] }
phantom-zone-evaluator = { path = "../phantom-zone/evaluator", features = ["dev"] }

[[bin]]
name = "server"
path = "bin/server.rs"

[[bin]]
name = "worker"
path = "bin/worker.rs"
